[gd_scene load_steps=2 format=3 uid="uid://2memjss351st"]

[ext_resource type="Script" uid="uid://cxynw6ai1rbev" path="res://scripts/pause.gd" id="1_f1d2v"]

[node name="pause" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_f1d2v")

[node name="ColorRect" type="ColorRect" parent="."]
modulate = Color(0.188235, 0.188235, 0.188235, 0.529412)
layout_mode = 0
offset_right = 1440.0
offset_bottom = 896.0

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 448.0
offset_top = 192.0
offset_right = 1024.0
offset_bottom = 712.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="ResumeButton" type="Button" parent="MarginContainer/VBoxContainer"]
process_mode = 3
layout_mode = 2
text = "Resume"

[node name="BackToMenu" type="Button" parent="MarginContainer/VBoxContainer"]
process_mode = 3
layout_mode = 2
text = "Back to menu"

[node name="ExitButton" type="Button" parent="MarginContainer/VBoxContainer"]
process_mode = 3
layout_mode = 2
text = "Exit"

[connection signal="pressed" from="MarginContainer/VBoxContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/BackToMenu" to="." method="_on_back_to_menu_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
